# docs/swagger.json
@@ -5,7 +5,7 @@
         "contact": {},
         "version": "1.0.0"
     },
-    "host": "localhost:8080",
+    "host": "159.223.220.58:8080",
     "basePath": "/",
     "paths": {
         "/quiz/category": {
@@ -152,6 +152,44 @@
                     }
                 }
             }
+        },
+        "/quiz/questions/upload": {
+            "post": {
+                "description": "IUpload questions from JSON file to database",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "multipart/form-data"
+                ],
+                "tags": [
+                    "Quiz"
+                ],
+                "summary": "Upload questions from JSON file",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "Choose JSON file",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/main.SucsessResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/main.ErrorResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -253,6 +291,15 @@
                 "question_text": {
                     "type": "string",
                     "example": "Text of question"
+                }
+            }
+        },
+        "main.SucsessResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "Sucsess message"
                 }
             }
         }
